M7_アプリケーションの外観と操作性を変更する。

--- a/server/frontend/src/components/Dealers/Dealers.css
+++ b/server/frontend/src/components/Dealers/Dealers.css
@@ -55,11 +55,12 @@ table{
     align-items: flex-start;
   }
 
-  .reviewer {
+.reviewer {
     margin: 10px; /* Optional margin for spacing */
     font-style: italic;
     color: gray;
-    font-size: small;
+    font-size: 18px;
+    text-align: center;
 }
 
 .review {
